--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>
+    <body {% block bodyAttributes %}{% endblock %}>
         {% block body %}{% endblock %}
         <script src="{{ asset('js/scripts.js') }}"></script>
         {% block javascripts %}{% endblock %}
