--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -17,19 +17,36 @@
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('homepage') }}#about">About</a></li>
-                    <li><a href="{{ path('homepage') }}#jesuit-sciences">Jesuit Sciences</a></li>
-                    <li><a href="{{ path('homepage') }}#sources">Sources</a></li>
+                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#about">About</a></li>
+                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#jesuit-science">Jesuit Sciences</a></li>
+                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#sources">Sources</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li{% if 'list' == route %} class="active"{% endif %}><a href="{{ path('list') }}">List</a></li>
                     <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">Advanced Search</a></li>
-                    <li{% if 'map' == route %} class="active"{% endif %}><a href="{{ path('map') }}">Map</a></li>
-                    <li{% if 'graph' == route %} class="active"{% endif %}><a href="#">Graph</a></li>
+                    <li class="dropdown{% if 'list' == route or 'subjects' == route or 'map' == route or 'graph' == route %} active{% endif %}">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-header">Lists</li>
+                            <li><a href="{{ path('list') }}">Persons</a></li>
+                            <li><a href="{{ path('subjects') }}">Subjects</a></li>
+                            {#<li><a href="#">Something else here</a></li>#}
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Visualizations</li>
+                            <li><a href="{{ path('map') }}">Map</a></li>
+                            <li{% if 'graph' == route %} class="active"{% endif %}><a href="#">Graph</a></li>
+                        </ul>
+                    </li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
+                <form class="navbar-form navbar-right" role="search" action="{{ path('search') }}" method="POST">
                     <div class="form-group">
-                        <input type="text" class="form-control search" placeholder="Search the JSN">
+                        <input
+                                id="jsn-search"
+                                data-url="{{ path('autocomplete_persons') }}?q=%QUERY"
+                                data-url-places="{{ path('autocomplete_places') }}?q=%QUERY"
+                                type="text"
+                                class="form-control search"
+                                placeholder="Search the JSN"
+                                >
                     </div>
                 </form>
             </div>
