--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -26,7 +26,7 @@
         <div class="cta">
             <div class="well text-center">
                 <h4>Try out the JSN yourself</h4>
-                <a href="{{ path('search') }}" class="btn btn-primary">Try Advanced Search</a>
+                <a href="{{ path('search') }}" class="btn btn-primary">Use Advanced Search</a>
                 <a href="{{ path('graph') }}" class="btn btn-primary">View Graphical Analysis</a>
                 <a href="{{ path('map') }}" class="btn btn-primary">Explore on Map</a>
             </div>
