--- a/app/Resources/views/default/subjects.html.twig
+++ b/app/Resources/views/default/subjects.html.twig
@@ -17,7 +17,7 @@
             <header>
                 <small class="pull-right text-muted" style="margin-top: 20px; line-height: 28px;"><em>number after subject denotes count of associated persons</em></small>
                 <h2>
-                    Subjects
+                    <span class="text-muted">{{ fullCount }}</span> Subjects
                 </h2>
                 <ul class="nav nav-pills letter-list">
                     {% for letter in range('A', 'Z') %}
