--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -26,13 +26,13 @@
         <div class="cta">
             <div class="well text-center">
                 <h4>Try out the JSN yourself</h4>
-                <a href="{{ path('search') }}" class="btn btn-primary">Use Advanced Search</a>
-                <a href="{{ path('graph') }}" class="btn btn-primary">View Graphical Analysis</a>
-                <a href="{{ path('map') }}" class="btn btn-primary">Explore on Map</a>
+                <a href="{{ path('search') }}" class="btn btn-primary">Use advanced search</a>
+                <a href="{{ path('graph') }}" class="btn btn-primary">View graphical analysis</a>
+                <a href="{{ path('map') }}" class="btn btn-primary">Explore on map</a>
             </div>
             <p class="small text-center">
-                <a href="{{ path('random') }}">Random Database Entry</a> &bull;
-                <a href="{{ path('list') }}">Complete Alphabetical List</a>
+                <a href="{{ path('random') }}">Random database entry</a> &bull;
+                <a href="{{ path('list') }}">Complete alphabetical list</a>
             </p>
         </div>
 
@@ -49,7 +49,7 @@
 
     <div class="container container-narrow">
         <div class="col-xs-12">
-        <h3 class="jumptarget" id="jesuit-science">Jesuit Early Modern Science</h3>
+        <h3 class="jumptarget" id="jesuit-science">Jesuit early modern science</h3>
 
         <p>
             The key interest is in Jesuits active in early modern mathematical sciences. Building on already existing
