--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,11 +18,11 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#about">About</a></li>
-                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#jesuit-science">Jesuit Sciences</a></li>
+                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#jesuit-science">Jesuit sciences</a></li>
                     <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#sources">Sources</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">Advanced Search</a></li>
+                    <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">Advanced search</a></li>
                     <li class="dropdown{% if 'list' == route or 'subjects' == route or 'map' == route or 'graph' == route %} active{% endif %}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -73,16 +73,16 @@
                     <h4>Partners</h4>
                     <p>
                         The project behind the Jesuit Science Network is funded by the <a href="http://www.dfg.de/en/">DFG</a>
-                        (2011-2016) and located at the <a href="#">Interdisciplinary Centre for Science and Technology Studies</a> at
-                        <a href="#">Wuppertal University</a>.
+                        (2011-2016) and located at the <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html">Interdisciplinary Centre for Science and Technology Studies</a> at
+                        <a href="http://www.uni-wuppertal.de/en/home.html">Wuppertal University</a>.
                     </p>
                     <p>
                         The main database behind the JSN along with its
-                        editing tools are powered by the <a href="#">Person Data Repository</a> project at the <a href="#">BBAW</a>.
+                        editing tools are powered by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">BBAW</a>.
                     </p>
                 </div>
                 <div class="col-sm-4">
-                    <h4>Project Manager</h4>
+                    <h4>Project manager</h4>
 
                     <p>
                         <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/prof-dr-volker-remmert.html">Volker Remmert</a><br>
@@ -90,7 +90,7 @@
                         remmert@<span class="hidden">null</span>uni-wuppertal.de
                     </p>
 
-                    <h4>Primary Investigator</h4>
+                    <h4>Primary investigator</h4>
                     <p>
                         <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/dagmar-mrozik.html">Dagmar Mrozik</a><br>
                         Wuppertal University<br>
