--- a/app/Resources/views/graph/index.html.twig
+++ b/app/Resources/views/graph/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="col-xs-12">
-            <h2>Graphical Analyses</h2>
+            <h2>Graphical analyses</h2>
         </div>
     </div>
 
